--- a/index.html
+++ b/index.html
@@ -19,10 +19,25 @@
     <script type="text/javascript" src="js/controller/home.js"></script>
     <script type="text/javascript" src="js/controller/product.js"></script>
     <script type="text/javascript" src="js/controller/product-detail.js"></script>
+    <script type="text/javascript" src="js/controller/product-table.js"></script>
     <script type="text/javascript" src="js/directive/header.js"></script>
     <script type="text/javascript" src="js/directive/footer.js"></script>
     <script type="text/javascript" src="js/directive/carousel.js"></script>
-
+<style>
+         table, th , td {
+            border: 1px solid grey;
+            border-collapse: collapse;
+            padding: 5px;
+         }
+         
+         table tr:nth-child(odd) {
+            background-color: #f2f2f2;
+         }
+         
+         table tr:nth-child(even) {
+            background-color: #ffffff;
+         }
+      </style>
 
 
 </head>
